# Qiskit_algos

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
qalgos/: __init__.py  backends.py  bernstein_vazirani.py  deutsch_jozsa.py  oracles.py
